@@ -1,8 +1,12 @@
 package com.example.scadaeditorbackend.service.imlp;
 
 import com.example.scadaeditorbackend.config.NodeTemplates;
-import com.example.scadaeditorbackend.dto.*;
-import com.example.scadaeditorbackend.exception.NotFoundException;
+import com.example.scadaeditorbackend.dto.nodeDto.CreateNodeDto;
+import com.example.scadaeditorbackend.dto.nodeDto.CreateNodeResponse;
+import com.example.scadaeditorbackend.dto.nodeDto.NodeDto;
+import com.example.scadaeditorbackend.dto.nodeDto.NodeResponse;
+import com.example.scadaeditorbackend.dto.paramDto.ParamDto;
+import com.example.scadaeditorbackend.mapper.NodeMapper;
 import com.example.scadaeditorbackend.model.Description;
 import com.example.scadaeditorbackend.model.Node;
 import com.example.scadaeditorbackend.model.NodeParam;
@@ -10,17 +14,14 @@ import com.example.scadaeditorbackend.repository.DescriptionRepository;
 import com.example.scadaeditorbackend.repository.NodeRepository;
 import com.example.scadaeditorbackend.repository.ParamRepository;
 import com.example.scadaeditorbackend.service.NodeService;
-import jakarta.persistence.EntityManager;
 import jakarta.transaction.Transactional;
-import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.HashSet;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,6 +30,7 @@ public class NodeServiceImpl implements NodeService {
     private final NodeRepository nodeRepository;
     private final DescriptionRepository descriptionRepository;
     private final ParamRepository paramRepository;
+    private final NodeMapper nodeMapper;
 
     @Override
     public void deleteNode(Long id) {
@@ -43,37 +45,30 @@ public class NodeServiceImpl implements NodeService {
 
 
     @Override
-    public CreateNodeResponse createNode(CreateNodeDTO createNodeDTO) {
+    public CreateNodeResponse createNode(CreateNodeDto createNodeDTO) {
         CreateNodeResponse response = new CreateNodeResponse();
         validateNodeType(createNodeDTO.getType());
 
-        Node node = new Node();
-        node.setNodeType(createNodeDTO.getType());
-        node.setIdNode("temp");
-        node.setName(createNodeDTO.getName());
-        node.setParentId(createNodeDTO.getParentId());
-
+        Node node = nodeMapper.toEntity(createNodeDTO);
         Node savedNode = nodeRepository.save(node);
         savedNode.updateIdNode();
         boolean isParent = "cha".equals(createNodeDTO.getType());
-        response.setNodeDTO(convertToDto(savedNode, isParent));
+        response.setNodeDTO(nodeMapper.toDto(savedNode, isParent));
+
 
         List<Long> paramIds = NodeTemplates.getTemplateParams(createNodeDTO.getType());
         List<Description> descriptions = descriptionRepository.findAll();
+
         if (paramIds != null) {
             for (Long paramId : paramIds) {
                 NodeParam nodeParam = new NodeParam();
+
                 nodeParam.setIdType(paramId);
                 nodeParam.setNode(savedNode);
                 nodeParam.setValue("");
-                NodeParam savedParam = paramRepository.save(nodeParam);
 
-                ParamDTO dto = new ParamDTO();
-                dto.setId(savedParam.getId());
-                dto.setIdNode(savedParam.getNode().getIdNode());
-                dto.setName(descriptions.get(savedParam.getIdType().intValue()-1).getName());
-                dto.setType(descriptions.get(savedParam.getIdType().intValue()-1).getType());
-                dto.setValue(savedParam.getValue());
+                NodeParam savedParam = paramRepository.save(nodeParam);
+                ParamDto dto = nodeMapper.toDto(savedParam,descriptions);
 
                 response.getParams().add(dto);
             }
@@ -87,64 +82,40 @@ public class NodeServiceImpl implements NodeService {
             throw new IllegalArgumentException("Node type must be 'dev', 'sub' or 'cha'");
         }
     }
-    private NodeDTO convertToDto(Node node, Boolean isParent) {
-        NodeDTO dto = new NodeDTO();
-        dto.setIdNode(node.getIdNode());
-        dto.setName(node.getName());
-        dto.setIsParent(isParent);
-        dto.setParentId(node.getParentId());
-        return dto;
-    }
 
     @Override
     public NodeResponse getFullHierarchy(String site, String project) {
         NodeResponse response = new NodeResponse();
 
         List<Node> devices = nodeRepository.findDevicesBySiteAndProject(site, project);
-        List<String> deviceIds = devices.stream().map(Node::getIdNode).collect(Collectors.toList());
+        List<Node> allNodes = new ArrayList<>(devices);
+        List<Node> subtypes = findByParentIds(devices);
+        allNodes.addAll(subtypes);
+        List<Node> channels = findByParentIds(subtypes);
+        allNodes.addAll(channels);
 
-        List<Node> subtypes = nodeRepository.findByParentIds(deviceIds);
-        List<String> subtypeIds = subtypes.stream().map(Node::getIdNode).collect(Collectors.toList());
-
-        List<Node> channels = nodeRepository.findByParentIds(subtypeIds);
-        List<String> channelsIds = channels.stream().map(Node::getIdNode).collect(Collectors.toList());
+        List<String> nodesIds = allNodes.stream().map(Node::getIdNode).toList();
 
         List<Description> descriptions = descriptionRepository.findAll();
 
-        List<String> nodesIds = new ArrayList<>();
-        nodesIds.addAll(deviceIds);
-        nodesIds.addAll(subtypeIds);
-        nodesIds.addAll(channelsIds);
         List<NodeParam> allParams = paramRepository.findParamsByNodeIds(nodesIds);
-        allParams.forEach(param -> {
-           ParamDTO dto = new ParamDTO();
-           dto.setId(param.getId());
-           dto.setIdNode(param.getNode().getIdNode());
-           dto.setName(descriptions.get(param.getIdType().intValue()-1).getName());
-           dto.setType(descriptions.get(param.getIdType().intValue()-1).getType());
-           dto.setValue(param.getValue());
 
+        allParams.forEach(param -> {
+           ParamDto dto = nodeMapper.toDto(param,descriptions);
            response.getParams().add(dto);
         });
 
-        List<Node> nodes = new ArrayList<>();
-        nodes.addAll(devices);
-        nodes.addAll(subtypes);
-        nodes.addAll(channels);
-        nodes.forEach(node ->{
-            NodeDTO dto = new NodeDTO();
-            dto.setIdNode(node.getIdNode());
-            dto.setName(node.getName());
-            dto.setParentId(node.getParentId());
-            if(node.getIdNode().substring(0,3).equals("cha")) {
-                dto.setIsParent(true);
-            } else{
-                dto.setIsParent(false);
-            }
+        allNodes.forEach(node ->{
+            NodeDto dto = nodeMapper.toDto(node);
             response.getNodes().add(dto);
         });
         return response;
     }
-
+    // Универсальный метод для поиска дочерних узлов
+    private List<Node> findByParentIds(List<Node> parents) {
+        if (parents.isEmpty()) return Collections.emptyList();
+        List<String> parentIds = parents.stream().map(Node::getIdNode).toList();
+        return nodeRepository.findByParentIds(parentIds);
+    }
 
 }
